test/testdata/functions/anonymous/missing_4_args_error.lox
var add = fun(a, b, c, d) {
  print a + b + c + d;
};

add(); // error: (anonymous)() accepts 4 arguments but 0 were given
